# otus_cpp_basic_hw2

./: README.md
CMake/: CMakeLists.txt
HW2_VS_Project/: HW2_VS_Project.sln
HW2_VS_Project/Test_Project/: Test_Project.vcxproj  Test_Project.vcxproj.filters
HW2_VS_Project/Test_Project/x64/Debug/: HW2_VS_Project.exe.recipe  HW2_VS_Project.ilk  Test_Project.exe.recipe  Test_Project.ilk  vc143.idb
HW2_VS_Project/Test_Project/x64/Debug/HW2_VS_Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  HW2_VS_Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
HW2_VS_Project/Test_Project/x64/Debug/Test_Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Test_Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
